fix link to bigger map

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,7 +8,7 @@
   <div id="map">
     <img src="/images/map.png" width="350" height="300" alt="Svobodova 11, Praha 2-Albertov"/>
     <br/>
-    <a href="http://maps.google.com/maps?f=q&amp;source=embed&amp;hl=cs&amp;geocode=&amp;q=mil%C3%AD%C4%8Dova+5&amp;sll=50.082315,14.463329&amp;sspn=0.041307,0.071754&amp;ie=UTF8&amp;ll=50.085055,14.450369&amp;spn=0.00413,0.006437&amp;z=16" rel="external">Zobrazit větší mapu</a>
+    <a href="http://maps.google.com/maps?f=q&amp;source=embed&amp;hl=cs&amp;geocode=&amp;q=Svobodova+11,+Praha+2&amp;aq=&amp;sll=50.067942,14.420609&amp;sspn=0.00865,0.019205&amp;ie=UTF8&amp;hq=&amp;hnear=Svobodova+135%2F11,+128+00+Praha+2-Vy%C5%A1ehrad,+%C4%8Cesk%C3%A1+republika&amp;t=m&amp;z=14&amp;ll=50.067942,14.420609">Zobrazit větší mapu</a>
   </div>
   <%= snippet "restaurant_vcard"%>
   <% # <p><%= t(:opening_hours)>: <!--[if IE]><nobr><![endif]--><strong><%= snippet "opening_hours" ></strong><!--[if IE]></nobr><![endif]--></p> %>
