--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -23,5 +23,5 @@
   <td><%= user.email %></td>
   <td><%= format_currency(user.spent_money) %></td>
   <td><%= format_percent(user.user_discount) if user.user_discount %></td>
-  <td><%= link_to t(:edit), :action => 'edit', :id => user.id %></td>
+  <td><%= link_to(t(:edit), :action => 'edit', :id => user.id)%></td>
 </tr>
